# companies

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  app.py  combine_all_sources.py  company-checker.html  compile_dataset.py  config.py  create_sample_input.py  data-sources.md  extract_all_pdfs.py  process_pdfs.py  pyproject.toml  requirements.txt  setup_wizard.py
.beads/: issues.jsonl
data/: brave_api_response_example.json  brave_api_response_shell_company.json  loaders.py  sample_input.xlsx  sec_enforcement.json
docs/: BRAVE_API_RESPONSE.md
enrichment/: __init__.py  brave_search.py  enrichment_pipeline.py  opencorporates.py  web_presence_scorer.py
scoring/: __init__.py  risk_scorer.py
scrapers/: __init__.py  data_compiler.py  icij_offshore.py  opensanctions.py  pdf_extractor.py  sec_scraper.py
scripts/: add_known_cases.py  download_batch.py  download_known_pdfs.py  download_more_pdfs.py  download_overnight.py  download_sec_pdfs.py  extract_from_pdfs.py  import_sec_enforcement.py  probe_2024.py  scrape_sec_edgar.py  scrape_sec_releases.py  test_ranges.py
trade/: .env.example  API_DOCUMENTATION.md  ARCHITECTURE.md  COMPREHENSIVE_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_TEST_REPORT.md  GETTING_STARTED.md  IMMEDIATE_ACTIONS.md  ITA_API_STATUS.md  QUICK_STATUS.txt  README.md  SUCCESS_SUMMARY.txt  TEST_RESULTS.md  company_verifier.py  config.py  demo_input.xlsx  demo_workflow.py  requirements.txt  test_api_curl.sh  test_companies_house_api.py  test_fixed_api.py  test_ita_api.py  test_sanctions_apis.py  test_working_sanctions.py
(+19 files in other folders)
