[project]
name = "company-research-tool"
version = "0.1.0"
description = "A Streamlit web application for investigating companies for potential shell company indicators, sanctions exposure, and fraud risk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pyvis>=0.3.2",
    "networkx>=3.0",
]

[tool.uv]
package = false
